k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: product
  namespace: canary-demo

spec:
  replicas: 4

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: product

  strategy:
    canary:
      stableService: product-stable
      canaryService: product-canary

      trafficRouting:
        istio:
          virtualService:
            name: product
            routes:
              - primary

      steps:
        - setWeight: 10
        - pause: {}

        - setWeight: 30
        - pause: {}

        - setWeight: 50
        - pause: {}

        - setWeight: 70
        - pause: {}

        - setWeight: 100

  template:
    metadata:
      labels:
        app: product

    spec:
      containers:
        - name: product
          image: ghcr.io/rsy2022p/istio-argo-canary-demo:product-0e28af5
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
