k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-canary
  namespace: canary-demo
spec:
  selector:
    app: product
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
