k8s/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-stable
  namespace: canary-demo
spec:
  selector:
    app: product
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
