k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: product
  namespace: canary-demo
spec:
  hosts:
    - product.canary-demo.example.com
  gateways:
    - product-gateway
  http:
    - name: primary
      route:
        - destination:
            host: product-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: product-canary
            port:
              number: 80
          weight: 0
